# BlogAgent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  pyproject.toml  requirements-vercel.txt
api/: index.py
blogagent/: cli.py
docs/: agentpulse-integration.md  architecture.md  eval_plan.md  limitations.md  portfolio-case-study.md
examples/: elephant_blog_output.md  heuristic_elephants_output.json  live_editor_elephants_output.json  live_elephants_output.json  live_judge_elephants_output.json  mock_elephants_output.json  run_trace_example.json
tests/: test_agent_handoffs.py  test_agentpulse.py  test_answer_count_snapshot.py  test_api.py  test_article_entity_audit.py  test_article_presentation.py  test_article_quality_gate.py  test_candidate_cleanliness_gate.py  test_candidate_pack.py  test_candidate_pack_quality_report.py  test_citation_judge.py  test_cli.py  test_compare_outputs.py  test_consumer_products_adapter.py  test_count_recommendations.py  test_domain_adapters.py  test_draft_candidate_compliance.py  test_editorial_polish.py  test_entity_candidate_ledger.py  test_evidence_sufficiency.py  test_final_answer_contract.py  test_final_contract_coherence.py  test_finance_adapter.py  test_llm.py  test_locked_entity_repair.py  test_polish_output_completion.py  test_public_copy_ready_language.py  test_publish_contract.py  test_publish_ready_pipeline.py  test_publishability_evaluator.py  test_quality_evaluator.py  test_query_contract.py  test_recommendation 2.py  test_recommendation.py  test_recommendation_article_skeleton.py  test_recommendation_extractor.py  test_skills.py  (+11 more)
(+69 files in other folders)
