[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blogagent"
version = "0.1.0"
description = "Source-grounded editorial agent for researched, fact-checked blog posts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "streamlit>=1.32",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
api = ["fastapi>=0.100"]
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.0"]
llm = ["anthropic>=0.25", "openai>=1.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
